Name:                snaprest
Version:             0.1
Synopsis:            Snap powered REST web services
Description:         Learning project for REST web services that is powered by the snap framework
License:             AllRightsReserved
Author:              Gregor Uhlenheuer
Maintainer:          gregor@uhlenheuer.net
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable snaprest
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    aeson                     >= 0.5,
    base                      >= 4     && < 5,
    bson                      >= 0.2.1,
    bytestring                >= 0.9.1 && < 0.11,
    bytestring-lexing         >= 0.3,
    containers                >= 0.4.2.1,
    mongoDB                   >= 1.3,
    monad-control             >= 0.3.1.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9.2 && < 0.10,
    snap-server               >= 0.9.2 && < 0.10,
    template-haskell          >= 2.6,
    text                      >= 0.11,
    transformers              >= 0.3

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
